Revert "fixed scrolling flickr on IE11"
This solution broke the smooth scrolling and possibly affected performance on mobile devices
cf https://stackoverflow.com/questions/19377810/ie-10-11-make-fixed-backgrounds-jump-when-scrolling-with-mouse-wheel

This reverts commit 8c4442df8f364a0f076362b52704aeb5697c507d.

--- a/src/core/_base.css
+++ b/src/core/_base.css
@@ -1,8 +1,6 @@
 html {
   font-size: 1em;
   box-sizing: border-box;
-  overflow: hidden;
-  height: 100%;  
 }
 
 *,
@@ -12,8 +10,6 @@ html {
 }
 
 body {
-  overflow: auto;
-  height: 100%;
   background-color: var(--background-color);
   font-size: 1rem;
   line-height: 1.6rem;
